--- a/setup.tex
+++ b/setup.tex
@@ -95,10 +95,10 @@ In the following pages, \gls{Buildbot} will be used as the CI server.
 
 \section{A First Build}
 
-Download \gls{NAnt} from \url{http://sourceforge.net/projects/nant/files/nant/}. As of the time of this writing, it is recommended that you get
-either the stable release of 0.90 or the nightly build. Unzip to C:$\backslash$Program Files\nant-\<version\> or another centrally available 
-location.
+%Download \gls{NAnt} from \url{http://sourceforge.net/projects/nant/files/nant/}. As of the time of this writing, it is recommended that you get
+%either the stable release of 0.90 or the nightly build. Unzip to C:$\backslash$Program Files\nant-\<version\> or another centrally available 
+%location.
 
-Modify your \em{\%PATH\%} environment variable to point to \<NAnt-Installation-Directory\>$\backslash$bin \(i.e. C:\Program Files\nant-0.90\bin\).
+Modify your \em \%PATH\% \em environment variable to point to $\langle$NAnt-Installation-Directory$\rangle$$\backslash$bin (i.e. C:$\backslash$Program Files$\backslash$nant-0.90$\backslash$bin).
 Do this by launching the System Properties window. This can be done by pressing the Windows and Pause keys simultaneously. This key comibination is
 denoted by ``Windows + Pause'' \(you will see this shorthand for key combinations again\).
