Created appendix for admin tasks

--- a/book.tex
+++ b/book.tex
@@ -40,6 +40,10 @@ The examples included hereafter are executed in C\# and Microsoft.Net, but the c
 % Setting Up Your Programming Environment
 \include{setup}
 
+\appendix
+% Appendix on Windows Administrative Tasks
+\include{windows-admin}
+
 \printglossaries
 
 \end{document}
