--- a/glossaryentries.tex
+++ b/glossaryentries.tex
@@ -15,7 +15,7 @@ description={``A feature {[}of software programs{]} that suggests text automatic
 \newglossaryentry{NUnit}
 {
 name=NUnit,
-description={A \gls{FLOSS} unit testing tool written in C\#.\footnote{\url{http://www.nunit.org/}}}
+description={A \gls{FLOSS} unit testing tool written in \CSharp.\footnote{\url{http://www.nunit.org/}}}
 }
 
 \newglossaryentry{branching}
@@ -70,7 +70,7 @@ description={``Free/\-Libre/\-Open-\-source software (FLOSS) is liberally licens
 {
 name=\glslink{NAnt}{NAnt},
 text=NAnt,
-description={A \gls{FLOSS} build automation tool written in C\#\footnote{\url{http://nant.sourceforge.net/}}}
+description={A \gls{FLOSS} build automation tool written in \CSharp\footnote{\url{http://nant.sourceforge.net/}}}
 }
 
 \newacronym[description={\glslink{nant}{Short for ``Not Ant''\footnote{\url{http://nant.sourceforge.net/release/latest/help/introduction/fog0000000042.html}}}}]{NAnt}{NAnt}{Not Ant}
