--- a/setup.tex
+++ b/setup.tex
@@ -12,7 +12,7 @@ environment.
 to transfer knowledge to its end user. Want to know the best way to write a task for your build engine? Why not see how the authors of your build
 engine did it? In order to write code, you must learn how to read code. By extension, to write code well, you must learn how to read code well. It is 
 important to figure out why a piece of code was written the way it was and not just settle for duplicating and succesfully compiling it. Reading the 
-code behind open source software is a cheap and easy way to learn from the masters. \gls{NAnt} contains some of the most well written C\# code out there.
+code behind open source software is a cheap and easy way to learn from the masters. \gls{NAnt} contains some of the most well written \CSharp code out there.
 
 \gls{FLOSS} software can be a little more difficult to set up, but doing so is worth the extra effort. There are many freely available tutorials
 online that will walk you through how to configure a software package for first-time use. In the process of setting up software, you will learn a
@@ -99,4 +99,4 @@ Download \gls{NAnt} from \url{http://sourceforge.net/projects/nant/files/nant/}.
 either the stable release of 0.90 or the nightly build. Unzip to C:$\backslash$Program Files$\backslash$nant-$\langle$version$\rangle$ or another centrally available 
 location.
 
-Modify your \em \%PATH\% \em environment variable to point to $\langle$NAnt-Installation-Directory$\rangle$$\backslash$bin (i.e. C:$\backslash$Program Files$\backslash$nant-0.90$\backslash$bin).
+Modify your \em \hyperref[path]{\%PATH\%} \em environment variable to point to $\langle$NAnt-Installation-Directory$\rangle$$\backslash$bin (i.e. C:$\backslash$Program Files$\backslash$nant-0.90$\backslash$bin).
