Working on section Create Your First Build File

--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,8 @@
 \documentclass{book}
+
+\usepackage[T1]{fontenc} % use the T1 font encoding
+\usepackage{lmodern}
+
 \usepackage{hyperref}
 
 \hypersetup{colorlinks=true,
@@ -49,6 +53,9 @@ The examples included hereafter are executed in \CSharp and Microsoft.Net, but t
 \appendix
 % Appendix on Windows Administrative Tasks
 \include{windows-admin}
+
+% Appendix on Tools
+\include{tools}
 
 \printglossaries
 
