--- a/glossaryentries.tex
+++ b/glossaryentries.tex
@@ -1,3 +1,5 @@
+%glossaryentries.tex
+
 %Terms
 
 \newglossaryentry{refactoring}
@@ -38,6 +40,11 @@ name=Buildbot,
 description={A \gls{FLOSS} distributed build and \gls{CI} tool written in Python.\footnote{\url{http://trac.buildbot.net/}}}
 }
 
+\newglossaryentry{text-editor}
+{
+name=text-editor,
+description={A program that allows it's user to edit the text of a file. Useful for quick editing as they are typically much lighter weight than full-blown \glspl{IDE}, therefore they startup and shutdown much faster.}
+}
 
 %Acronyms
 
