--- a/windows-admin.tex
+++ b/windows-admin.tex
@@ -10,3 +10,20 @@ denoted by \em Windows  Pause \em (you will see this \em button + button \em sho
 You will be presented with the \em Edit System Variable \em dialog. In the \em Variable value \em box, paste the path to the program (full path to the directory it is in) at the end of the list of paths. Ensure there is a semi-colon separating new path from the one before it. Click the \em OK \em button to close the \em Edit System Variable \em dialog. Click \em OK \em to close the \em Environment Variables \em dialog, and close the \em System Properties \em window.
 
 \em N.B.: any command windows you had open while modifing your PATH variable will not reflect the changes to it. Be sure to close and reopen all command windows when editing your PATH. \em
+
+\section{Launching a Command Window}\label{launch-command-window}
+Launching a command window can be done by typing ``cmd'' into the \em Run \em box and pressing \em Enter \em. The \em Run \em box can be found from the \em start \em menu on Windows (look for the text ``Run...'' on the start menu). Alternatively, you may bring up the \em Run \em box by pressing \em Windows + R \em on the keyboard.
+
+\section{Changing Directories}\label{change-directories}
+You may change the current working directory (cwd) in a command window by issuing the command ``cd'' followed by the name of directory you would like to make the new current working directory.
+
+For example: \em C:$\backslash$Users$\backslash$GrokCodeBook$\rangle$ cd Desktop \em.
+
+The above command would take you from your home directory (your profile directory---C:$\backslash$Users$\backslash$GrokCodeBook if you are the user ``GrokCodeBook'') to your Desktop in Vista or Windows 7.
+
+\section{Create a Directory}\label{create-directory}
+The ``mkdir'' command can be used to create a sub-directory from a directory you have sufficient permissions in.
+
+For example: \em C:$\backslash$Users$\backslash$GrokCodeBook$\backslash$Desktop$\rangle$ mkdir GrokCodeBook \em.
+
+The above command would create the directory C:$\backslash$Users$\backslash$GrokCodeBook$\backslash$Desktop$\backslash$GrokCodeBook.
