--- a/defs.tex
+++ b/defs.tex
@@ -11,6 +11,7 @@
 \ifmonospace
     C\#
 \else%
+    %C\kern-.1667em\raise.30ex\hbox{\smaller{\#}}
     C\# %TODO: make this match example in url above
 \fi
 \spacefactor1000 }
